--- a/docSrc/src/content/GettingStarted/JxmlFile.mdx
+++ b/docSrc/src/content/GettingStarted/JxmlFile.mdx
@@ -1,6 +1,6 @@
 ### Example:
 
-Create a yaml file with extension `example.jxml`
+Create a yaml file with extension `./example.jxml`
 
 ```yaml
 ---
@@ -31,7 +31,7 @@ render:
 and then you can import this component to jsx file:
 
 ```jsx
-import Example from 'jxml-react';
+import Example from './example.jxml';
 
 export default () => <Example />;
 ```
