--- a/docSrc/src/content/GettingStarted/JxmlFile.mdx
+++ b/docSrc/src/content/GettingStarted/JxmlFile.mdx
@@ -20,7 +20,7 @@ render:
       color: white
       padding: 10px
     children: this.props.title
-    onClick: |
+    onClick: !!js |
       () => {
         this.setState(state=> {
             state.pageTitle = 'Hello World!'
